data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4638.wast
;; 7. **Test for Invalid Funcref in `br_table` Leading to `call_indirect` Mismatch**:    - Transition through `br_table` to an invalid or empty function reference slot, then execute `call_indirect` leading to a mismatched function type.    - Constraint: Invalid or empty function reference slot.    - Relation: Assesses failure conditions where `br_table` targets lead to invalid references for `call_indirect`.

(assert_invalid
  (module
    (type (func))
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) $invalid-func)
    (func $indirect (block $label (br_table $label (i32.const 0))))
    (func $call (call_indirect (type 1) (i32.const 0)))
  )
  "invalid funcref in br_table leading to call_indirect mismatch"
)